# file2txt

./: CHANGELOG.md  Cargo.toml  allcode.txt  allcodes.md  example.md  my_code_backup.md  output.md  output.txt  readme.md
.github/workflows/: release.yml
file2txt-tests/: never.txt  test1.txt
file2txt-tests/testdir/: never.txt
src/: debug_config.rs  error.rs  filter_config.rs  lib.rs  main.rs  output_config.rs
tests/: test_filter.rs  test_output.rs
